; ModuleID = '/home/carl/AnghaBench/mpv/misc/extr_dispatch.c_queue_dtor.c'
source_filename = "/home/carl/AnghaBench/mpv/misc/extr_dispatch.c_queue_dtor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_dispatch_queue = type { i32, i32, i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @queue_dtor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @queue_dtor(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.mp_dispatch_queue*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.mp_dispatch_queue*
  store %struct.mp_dispatch_queue* %5, %struct.mp_dispatch_queue** %3, align 8
  %6 = load %struct.mp_dispatch_queue*, %struct.mp_dispatch_queue** %3, align 8
  %7 = getelementptr inbounds %struct.mp_dispatch_queue, %struct.mp_dispatch_queue* %6, i32 0, i32 5
  %8 = load i32, i32* %7, align 4
  %9 = icmp ne i32 %8, 0
  %10 = xor i1 %9, true
  %11 = zext i1 %10 to i32
  %12 = call i32 @assert(i32 %11)
  %13 = load %struct.mp_dispatch_queue*, %struct.mp_dispatch_queue** %3, align 8
  %14 = getelementptr inbounds %struct.mp_dispatch_queue, %struct.mp_dispatch_queue* %13, i32 0, i32 4
  %15 = load i32, i32* %14, align 4
  %16 = icmp ne i32 %15, 0
  %17 = xor i1 %16, true
  %18 = zext i1 %17 to i32
  %19 = call i32 @assert(i32 %18)
  %20 = load %struct.mp_dispatch_queue*, %struct.mp_dispatch_queue** %3, align 8
  %21 = getelementptr inbounds %struct.mp_dispatch_queue, %struct.mp_dispatch_queue* %20, i32 0, i32 3
  %22 = load i32, i32* %21, align 4
  %23 = icmp ne i32 %22, 0
  %24 = xor i1 %23, true
  %25 = zext i1 %24 to i32
  %26 = call i32 @assert(i32 %25)
  %27 = load %struct.mp_dispatch_queue*, %struct.mp_dispatch_queue** %3, align 8
  %28 = getelementptr inbounds %struct.mp_dispatch_queue, %struct.mp_dispatch_queue* %27, i32 0, i32 2
  %29 = load i32, i32* %28, align 4
  %30 = icmp ne i32 %29, 0
  %31 = xor i1 %30, true
  %32 = zext i1 %31 to i32
  %33 = call i32 @assert(i32 %32)
  %34 = load %struct.mp_dispatch_queue*, %struct.mp_dispatch_queue** %3, align 8
  %35 = getelementptr inbounds %struct.mp_dispatch_queue, %struct.mp_dispatch_queue* %34, i32 0, i32 1
  %36 = call i32 @pthread_cond_destroy(i32* %35)
  %37 = load %struct.mp_dispatch_queue*, %struct.mp_dispatch_queue** %3, align 8
  %38 = getelementptr inbounds %struct.mp_dispatch_queue, %struct.mp_dispatch_queue* %37, i32 0, i32 0
  %39 = call i32 @pthread_mutex_destroy(i32* %38)
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @pthread_cond_destroy(i32*) #1

declare dso_local i32 @pthread_mutex_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
